Remove working files
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20263 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/metapackages/debian/Makefile
+++ b/toolchain/metapackages/debian/Makefile
@@ -56,7 +56,7 @@ oneplatform:
 	sed -i 's/@@TOOLCHAIN@@/$(TOOLCHAIN)/g' control.$(CONFIGNAME)
 	sed -i 's/@@VERSION@@/$(PKGVERSION2)/g' control.$(CONFIGNAME)
 	equivs-build control.$(CONFIGNAME)
-	#rm control.$(CONFIGNAME) *.buildinfo *.changes
+	rm control.$(CONFIGNAME) *.buildinfo *.changes
 	mv muntsos-$(TOOLCHAIN)-$(CONFIGNAME)_$(PKGVERSION2)_all.deb muntsos-$(TOOLCHAIN)-$(CONFIGNAME)-$(PKGVERSION2)-$(OSNAME)-all.deb
 
 # Remove working files
