Patch .config for the target board
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20280 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/hostapd/Makefile
+++ b/extensions/hostapd/Makefile
@@ -61,7 +61,8 @@ src.done: $(SRCDIST)
 # Compile sources
 
 build.done: src.done
-	cp defconfig $(SRCDIR)/hostapd/.config
+	cp defconfig					$(SRCDIR)/hostapd/.config
+	sed -i  's#@@SYSROOT@@#$(GCCSYSROOT)#g'		$(SRCDIR)/hostapd/.config
 	$(MAKE) $(MAKEJOBS) -C $(SRCDIR)/hostapd CC=$(CROSS_COMPILE)gcc
 	touch $@
 
