--- a/bootkernel/initramfs/wpa_supplicant.config
+++ b/bootkernel/initramfs/wpa_supplicant.config
@@ -46,5 +46,7 @@ CONFIG_DEBUG_SYSLOG=y
 CONFIG_DEBUG_SYSLOG_FACILITY=LOG_DAEMON
 CONFIG_LIBNL32=y
 
-CFLAGS += -I@@LIBNL3DIR@@
+PKG_CONFIG=true
+
+CFLAGS += -I@@LIBSINCDIR@@ -I@@LIBSINCDIR@@/libnl3
 LDFLAGS += -ldl -lpthread -lm
