Tweaked for building with either Crosstool-NG or Debian cross-toolchains
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@20292 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/extensions/dma/Makefile
+++ b/extensions/dma/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building DragonFly Mail Agent package for MuntsOS
 
-# Copyright (C)2020-2021, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2020-2022, Philip Munts, President, Munts AM Corp.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -35,6 +35,8 @@ PKGARCH		= $(DEBARCH)
 PKGDIR		= $(PKGNAME)-$(OSNAME)
 PKGFILE		= $(PKGDIR).deb
 
+CFLAGS		+= -I$(LIBSINCDIR)
+
 default: package.deb
 
 source.done:
@@ -42,7 +44,7 @@ source.done:
 	touch $@
 
 compile.done: source.done
-	$(MAKE) -C dma CC=$(CROSS_COMPILE)gcc CONFDIR=/usr/local/etc/dma
+	CFLAGS="$(CFLAGS)" CONFDIR=/usr/local/etc/dma LIBEXEC=/usr/local/libexec $(MAKE) -C dma CC=$(CROSS_COMPILE)gcc
 	touch $@
 
 # Build the Debian package file
